# dirsort

./: LICENSE  README.md  README_EN.md  pyproject.toml
dirsort/: __init__.py  cli.py
