[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dirsort"
version = "0.1.0"
description = "Organize files in a directory by extension"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[project.scripts]
dirsort = "dirsort.cli:main"
